--- a/wxPython/wxPython/lib/PyCrust/CHANGES.txt
+++ b/wxPython/wxPython/lib/PyCrust/CHANGES.txt
@@ -7,8 +7,8 @@
 -----------------------------------------
 
 
-0.9 (2/27/2003 to //2003)
-=========================
+0.9 (2/27/2003 to 3/20/2003)
+============================
 
 Added fontIncrease, fontDecrease, fontDefault signals, receivers and
 keybindings:
@@ -23,6 +23,7 @@ documentation and docstrings for wxPython classes and functions.
 Introduced new tabbed interface:
 
 * Namespace
+* Calltip
 * Session
 * Dispatcher
 * wxPython Docs
