--- a/wxPython/CHANGES.txt
+++ b/wxPython/CHANGES.txt
@@ -2,6 +2,13 @@ CHANGES.txt for wxPython
 
 ----------------------------------------------------------------------
 
+?????
+-------
+
+Added wxScrolledPanel from Wil Sadkin
+
+
+
 2.4.0.7
 -------
 Gave up on generating a warning upon the use of the old true/false or
